test_data/typeerror/pandas-22804.py
result = js
result = result[spec]